feature: Migrated to REST

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
+NODE_ENV=development
 SERVER_PORT=3000
 
-MONGODB_URI='mongodb://localhost:27017/jew-work'
+MONGODB_URI=''
 
-JWT_SECRET='jew_work2023*'
+JWT_SECRET=''
 JWT_EXPIRESIN='1d'
+
+MAILDEV_HOST=''
+MAILDEV_PORT=2525
+MAILDEV_USER=''
+MAILDEV_PASS=''
