--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.5",
-    "@nestjs/apollo": "^12.0.10",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^12.0.10",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.1.14",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "graphql": "^16.8.1",
+    "ejs": "^3.1.9",
     "joi": "^17.11.0",
     "mongoose": "^8.0.0",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
