--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/websockets": "^10.3.0",
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
