--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "stripe": "^14.14.0",
     "twilio": "^4.20.0"
   },
   "devDependencies": {
