--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/websockets": "^10.3.0",
     "axios": "^1.6.5",
