--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.2.0",
     "ejs": "^3.1.9",
     "joi": "^17.11.0",
     "mongoose": "^8.0.0",
