--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "class-validator": "^0.14.0",
     "crypto-js": "^4.2.0",
     "ejs": "^3.1.9",
+    "html-pdf-node": "^1.0.8",
     "joi": "^17.11.0",
     "mongoose": "^8.0.0",
     "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pdfml": "^1.1.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "stripe": "^14.14.0",
