--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-pdf-node": "^1.0.8",
     "joi": "^17.11.0",
     "mongoose": "^8.0.0",
+    "mongoose-sequence": "^6.0.1",
     "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
